# p2p-ai-agents

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  AGENT_PROTOCOL.md  ARCHITECTURE_IMPROVEMENTS.md  AUTONOMOUS_PM.md  Agent.md  BENCHMARK.md  BMAD_UPDATE_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUARDRAILS.md  DOCUMENTATION_CLEANUP_INSTRUCTIONS.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EPICS_AND_STORIES.md.backup  EPICS_SUMMARY.txt  EXECUTION_CHECKLIST.md  FINAL_MISSION_REPORT.md  GITHUB_WORKFLOWS_INTEGRATION.md  GUARDRAILS_SUMMARY.md  HIGH_LEVEL_DESIGN.md  HOW_TO_UPDATE_FOR_OPENCODE.md  LICENSE  Makefile  README.md  REAL_PERFORMANCE_RESULTS.md  RESTRUCTURE_IMPLEMENTATION_COMPLETE.md  RESTRUCTURING_README.md  RESTRUCTURING_READY.md  ROADMAP.md  START_HERE_VALIDATION.md  STEP-2-EPIC-DESIGN.md  STORY_1-2_IMPLEMENTATION_SUMMARY.md  STORY_1-3_COMPLETION.md  (+29 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-with-docker.json  devcontainer.json
.github/: copilot-instructions.md  copilot-setup-steps.yaml
.github/ISSUE_TEMPLATE/: ci_failure.md
.github/workflows/: QUICK_START.md  README.md  create-implementation-issues.yml  create-implementation-issues.yml.disabled  documentation-check.yml  documentation-health.yml  documentation-health.yml.disabled2  documentation-maintenance.yml  documentation-template.yml  rust-clippy.yml  rust.yml
_bmad-output/: DOCUMENTATION_VALIDATION_REPORT.md  PARTY_MODE_SUMMARY.md  PRD-Gap-Analysis.md  party-mode-session-connectivity-first-2025-01-11.md
_bmad-output/autonomous-project/: final_project_report.md  raw_tasks.txt
_bmad-output/code-reviews/: cr-1-4-storage-consistency-model.md  cr-1-5-redis-storage-backend.md  cr-1-6-prometheus-metrics-collection.md  cr-1-6-remediation-summary.md
_bmad-output/excalidraw-diagrams/: README.md  convert-to-png.js  diagram-expert-system-architecture.excalidraw  theme.json
_bmad-output/implementation-artifacts/: 1-1-agent-identity-generation.md  1-1-initialize-node-review.md  1-1-initialize-node.md  1-2-configure-node-review.md  1-2-configure-node.md  1-3-basic-local-storage-backend.md  1-3-daemon-process-management.md  1-4-storage-consistency-model-implementation.md  1-5-redis-storage-backend.md  1-6-prometheus-metrics-collection.md  1-7-structured-json-logging.md  1-8-agent-lifecycle-management.md  3-1-fix-build-infrastructure.md  3-2-implement-identity-module.md  3-3-implement-network-layer.md  3-4-implement-task-management.md  3-5-create-mvp-demo-example.md  3-6-integration-tests-coverage.md  4-1-node-start-stop-cli.md  epic-1-retro-2026-01-04.md  sprint-status-old-jan06.yaml.backup  sprint-status.yaml
_bmad-output/planning-artifacts/: SUMMARY.md  arch-decisions-completion-report.md  architecture.md  bmm-workflow-status.yaml  documentation-improvement-priorities-2026-01-02.md  epics.md  implementation-readiness-report-2026-01-02-v2.md  implementation-readiness-report-2026-01-02.md  planning-structure-guide-2026-01-02.md  prd.md
_bmad-output/vision-transformation-2026-01-09/: ANNOUNCEMENT.md  ARCHITECTURE_DIAGRAM.md  EPIC_1_COMPLETION_PLAN.md  EPIC_3_INFERENCE_ENGINE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  RUST_INFERENCE_ENGINE_RESEARCH.md  TRANSFORMATION_COMPLETE_SUMMARY.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/master_workflows/: project_lifecycle.yaml
config/: agent.example.yaml
docs/: .docconfig.yaml  .markdownlint.json  500-LINE-LIMIT-POLICY.md  500_LINE_LIMIT_POLICY.md  AGENT-PROTOCOL.md  AGENT_PROTOCOL.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONFIG_QUICK_REFERENCE.md  CONTRIBUTING.md  DAEMON_MODE_GUIDE.md  DOCUMENT-NAMING-STANDARD.md  DOCUMENTATION-MIGRATION-COMPLETE.md  DOCUMENTATION_MIGRATION_COMPLETE.md  DOC_VALIDATION_REPORT.md  FR-IMPLEMENTATION-GUIDE.md  GITHUB-WORKFLOWS-INTEGRATION.md  GITHUB-WORKFLOWS-VALIDATION-COMPLETE.md  GITHUB_WORKFLOWS_VALIDATION_COMPLETE.md  GLOSSARY.md  HIGH-LEVEL-DESIGN.md  HIGH_LEVEL_DESIGN.md  INDEX.md  LIBP2P_COMPATIBILITY.md  NEW_STRUCTURE_SECTION.md  PLUGIN-SYSTEM-IMPLEMENTATION-COMPLETE.md  PRD-STEP-10-NON-FUNCTIONAL-REQUIREMENTS.md  PRD-STEP-9-FUNCTIONAL-REQUIREMENTS.md  PRD.md  PRD_VALIDATION_PROCESS.md  QUICK-REFERENCE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECTION-7-INDEX.md  SECTION-7-QUICK-REFERENCE.md  SECURITY.md  SECURITY_FIXES_2026-01.md  STEP-9-SUMMARY.md  STEP2_CHECKLIST.md  (+8 more)
docs/architecture/: README.md  adrs.md  (+8 more)
examples/: README.md  agent_lifecycle.rs  architecture_demo.rs  code_review_assistant.rs  demo_workflow.yaml  hello_agent.rs  mvp_demo.rs  network_bootstrap.rs  network_peer.rs  network_task.rs  protocol_test.rs  research_workflow.yaml  secure_task.rs  simple_task.rs  storage_plugin_demo.rs  structured_logging.rs
g3-plan/: new-requirements.md  new_requirements.md  planner_history.txt  task-management-summary.md
github_issues/: create_issues.sh  issues.json  summary.md
lab/: DEV_CONTAINER_NOTES.md  README.md  postgrest.conf  supabase-performance-lab.md
pooler_test_project/: .gitignore  README.md  mix.exs
scripts/: README.md  checklist_to_issues.py  create_implementation_issues.py  fix_attribution_range.sh  generate_docs.py  local_docs.sh  maintain_docs.sh  manage_tasks.py  pre-commit-docs.sh  run-benchmark.sh  simple_issues_generator.py  tasks.sh  test_doc_format.sh  update-bmad.sh  validate_docs.py  validate_links.py  validate_story_1-3.sh
src/: daemon.rs  identity.rs  lib.rs  main.rs  project_manager.rs
tasks/: README.md  TASK_AUDIT_REPORT.md
tests/: README.md  basic_functionality.rs  config_integration.rs  diagnostics_integration.rs  examples_advanced_usage.rs  examples_basic_usage.rs  examples_integration.rs  identity_simulation.rs  identity_stress.rs  integration.rs  integration_test.rs  lifecycle_integration.rs  logging_integration.rs  metrics_integration.rs  mod.rs  mvp_integration.rs  project_manager_tests.rs  shutdown_integration.rs  status_integration.rs  storage_perf.rs  test_ai_executor.rs
(+678 files in other folders)
