[package]
name = "p2p-ai-agents"
version = "0.1.0"
edition = "2021"
authors = ["P2P AI Agents Team"]
description = "A distributed peer-to-peer network of AI agents for collaborative processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p2p-ai-agents/p2p-ai-agents"
readme = "README.md"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
libp2p-identity = { version = "0.2", features = ["peerid", "ed25519"] }
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"

# System integration  
keyring = "2.3"
base64 = { version = "0.21", optional = false }
dirs = "5.0"

# Daemon mode (Unix only)
daemonize = "0.5"
nix = { version = "0.27", features = ["signal", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# System monitoring
sysinfo = "0.30"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.21"
metrics-util = "0.15"
prometheus = { version = "0.13", optional = true }
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional = true }
lazy_static = { version = "1.4", optional = true }

# Supabase/PostgreSQL (optional)
postgrest = { version = "1.5", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { version = "2.5", optional = true }

# Redis (optional)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio"], optional = true }

# Testing
criterion = "0.5"
mockall = "0.12"

# Network
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "mdns", "macros"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.5", optional = true }
age = { version = "0.9.0", features = ["armor", "ssh", "cli-common"] }
lru = "0.10.0"
libc = "0.2.179"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[features]
default = []
full = ["network", "storage", "cli", "metrics-prometheus"]
network = ["libp2p", "futures", "bytes"]
storage = []
storage-supabase = ["postgrest", "reqwest", "url"]
storage-redis = ["redis"]
metrics-prometheus = ["prometheus", "hyper", "lazy_static"]
cli = []
reqwest = ["dep:reqwest"]

[[example]]
name = "hello_agent"
path = "examples/hello_agent.rs"

[[example]]
name = "simple_task"
path = "examples/simple_task.rs"

[[example]]
name = "network_bootstrap"
path = "examples/network_bootstrap.rs"

[[example]]
name = "network_peer"
path = "examples/network_peer.rs"

[[example]]
name = "architecture_demo"
path = "examples/architecture_demo.rs"

[[example]]
name = "storage_plugin_demo"
path = "examples/storage_plugin_demo.rs"

[[example]]
name = "structured_logging"
path = "examples/structured_logging.rs"
