[package]
name = "p2p-ai-agents"
version = "0.1.0"
edition = "2021"
authors = ["P2P AI Agents Team"]
description = "A distributed peer-to-peer network of AI agents for collaborative processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p2p-ai-agents/p2p-ai-agents"
readme = "README.md"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = { version = "0.3", optional = false } # Moved to core as it is used in agent/mod.rs

# Cryptography
identity_iota = { version = "1.5", features = ["memstore", "client"] }
semaphore = { version = "0.1.0", package = "semaphore-rs", features = ["depth_20"] } # Placeholder version

ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
libp2p-identity = { version = "0.2", features = ["peerid", "ed25519", "serde"] }
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"


# System integration  
keyring = "2.3"
base64 = { version = "0.21", optional = false }
dirs = "5.0"

# Daemon mode (Unix only)
# daemonize = "0.5"  # Removed: unmaintained (RUSTSEC-2025-0069)
nix = { version = "0.27", features = ["signal", "process", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# System monitoring
sysinfo = "0.30"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.21"
metrics-util = "0.15"
prometheus = { version = "0.14", optional = true }
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional = true }
lazy_static = { version = "1.4", optional = true }

# Supabase/PostgreSQL (optional)
postgrest = { version = "1.5", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
url = { version = "2.5", optional = true }

# Redis (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"], optional = true }

# Testing
criterion = "0.5"
mockall = "0.12"

# Network
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "mdns", "gossipsub", "macros", "request-response"], optional = true }
bytes = { version = "1.5", optional = true }
age = { version = "0.11", features = ["armor", "ssh", "cli-common"] }
lru = "0.16"
libc = "0.2.179"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[features]
default = ["network", "reqwest"]  # MVP requires network layer
full = ["network", "storage", "cli", "metrics-prometheus"]
network = ["libp2p", "bytes"]
storage = []
storage-supabase = ["postgrest", "reqwest", "url"]
storage-redis = ["redis"]
metrics-prometheus = ["prometheus", "hyper", "lazy_static"]
cli = []
reqwest = ["dep:reqwest"]
libp2p = ["dep:libp2p"]

[[example]]
name = "hello_agent"
path = "examples/hello_agent.rs"

[[example]]
name = "simple_task"
path = "examples/simple_task.rs"

[[example]]
name = "network_bootstrap"
path = "examples/network_bootstrap.rs"

[[example]]
name = "network_peer"
path = "examples/network_peer.rs"

[[example]]
name = "network_task"
path = "examples/network_task.rs"
required-features = ["network"]

[[example]]
name = "architecture_demo"
path = "examples/architecture_demo.rs"

[[example]]
name = "storage_plugin_demo"
path = "examples/storage_plugin_demo.rs"

[[example]]
name = "structured_logging"
path = "examples/structured_logging.rs"
